--- a/ODFL/pyproject.toml
+++ b/ODFL/pyproject.toml
@@ -13,6 +13,7 @@ torchaudio = ">= 2.5.1"
 matplotlib = ">= 3.10"
 pandas = ">= 2.2"
 datasets = ">= 3.2.0"
+medmnist = ">= 3.0.2"
 
 [build-system]
 requires = ["poetry-core"]
