--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 ODFL/odfl/dataset_generation/__pycache__/dataset_generator.cpython-311.pyc
 ODFL/odfl/__pycache__/__init__.cpython-311.pyc
 ODFL/odfl/dataset_generation/__pycache__/utils.cpython-311.pyc
+ODFL/odfl/__pycache__/__init__.cpython-311.pyc
+ODFL/odfl/dataset_generation/__pycache__/dataset_generator.cpython-311.pyc
+ODFL/odfl/dataset_generation/__pycache__/utils.cpython-311.pyc
